# arknights-vanguards

./: .gitignore  justfile  pyproject.toml
config/: config.json
docs/: config.json  index.html
src/: app.py
src/vanguard_lib/: __main__.py  api.py  app.py  plotting.py  simulation.py  vanguards.py
src/vanguard_lib/lib/: plotting.py  simulation.py
tests/: app_test.py  plotting_test.py  simulation_test.py  test_config_loading.py  test_plotting.py  test_simulations.py
